# elastic-stacker

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  stacker.example.yaml  stacker.py
docs/: contributing.md  usage.md
elastic_stacker/: __about__.py  __init__.py  stacker.example.yaml  stacker.py
elastic_stacker/elasticsearch/: component_templates.py  enrich_policies.py  ilm_policies.py  index_templates.py  indices.py  pipelines.py  role_mappings.py  roles.py  transforms.py  watches.py
elastic_stacker/kibana/: agent_policies.py  package_policies.py  saved_objects.py
elastic_stacker/utils/: client.py  config.py  controller.py  logging.py  misc.py  schemas.py
kibana/: agent_policies.py  saved_objects.py
tools/elastic_stacker/: .gitignore  Pipfile  README.md  api_clients.py  cli.py  client.py  exporters.py  schemas.py  stacker.example.toml  stacker.example.yaml  stacker.py
tools/elastic_stacker/elasticsearch/: __init__.py  enrich_policies.py  generic.py  indices.py  pipelines.py  transforms.py  watches.py
tools/elastic_stacker/kibana/: __init__.py  agent_policies.py  generic.py  package_policies.py  saved_objects.py
tools/elastic_stacker/utils/: client.py  config.py  controller.py  logging.py  schemas.py
utils/: controller.py
