[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "elastic_stacker"
license = {file = "LICENSE"}
readme="README.md"
authors = [
  {name = "James Taliaferro", email = "taliaferro1+pypi@llnl.gov"},
]
keywords = ["elasticsearch"]
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "marshmallow",
    "python-slugify",
    "fire",
    "pyyaml",
    "ecs-logging",
]
dynamic = ["version"]
urls = { repository = "https://github.com/llnl/elastic-stacker" }

[tool.setuptools.dynamic]
version = {attr = "elastic_stacker.__version__"}

[project.scripts]
stacker = "elastic_stacker:main"

