[project]
name = "elastic-stacker"
version = "0.3.1"
description = "Import/export tool for the Elastic Stack."
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  {name = "James Taliaferro", email = "taliaferro1+pypi@llnl.gov"},
]
keywords = ["elasticsearch"]
urls = { repository = "https://github.com/llnl/elastic-stacker" }
requires-python = ">=3.9"
dependencies = [
    "ecs-logging>=2.2.0",
    "fire>=0.7.0",
    "httpx>=0.27.2",
    "marshmallow>=3.23.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
stacker = "elastic_stacker:main"


[tool.uv]
package = true
dev-dependencies = [
    "ipython>=8.18.1",
    "ruff>=0.7.1",
    "uv>=0.4.28",
]

