[project]
name = "elastic-stacker"
description = "Import/export tool for the Elastic Stack."
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  {name = "James Taliaferro", email = "taliaferro1+pypi@llnl.gov"},
]
keywords = ["elasticsearch"]
urls = { repository = "https://github.com/llnl/elastic-stacker" }
requires-python = ">=3.9"
dependencies = [
    "ecs-logging>=2.2.0",
    "fire>=0.7.0",
    "httpx>=0.27.2",
    "marshmallow>=3.23.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]

[project.scripts]
stacker = "elastic_stacker:main"

[tool.hatch.version]
path = "elastic_stacker/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "ipython>=8.18.1",
    "mdformat-config>=0.2.1",
    "mdformat-gfm>=0.3.7",
    "mdformat-ruff>=0.1.3",
    "mdformat>=0.7.18",
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
    "uv>=0.4.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
